# CMAR

./: .gitignore  Certav-idea.md  Certav-result-analysis-mentor.md  README.md  pyproject.toml  requirements.txt  skills-lock.json
archive/: 04_evaluate_baselines.py  06_ablations.py  07_analysis_figures.py  08_claim_audit.py  09_evaluate_ablations.py  CONTEXT.md  PLANNING.md  TASK.md
av-robustbench/: LICENSE  MANIFEST.in  PLANNING.md  README.md  TASK.md  pyproject.toml
av-robustbench/docs/: PUBLISHING.md
av-robustbench/examples/: evaluate_feature_cache.py
av-robustbench/src/av_robustbench/: __init__.py  cli.py  core.py
av-robustbench/src/av_robustbench/attacks/: __init__.py  autoattack_av.py  base.py  cross_modal.py  evaluate.py  pgd.py  pgd_input.py  square_attack.py
av-robustbench/src/av_robustbench/certification/: __init__.py  core.py  smoothing.py
av-robustbench/src/av_robustbench/datasets/: __init__.py  base.py  fakeavceleb.py  feature_cache.py  lavdf.py
av-robustbench/src/av_robustbench/degradations/: __init__.py  audio.py  battery.py  chains.py  specs.py  visual.py
av-robustbench/src/av_robustbench/evaluate/: __init__.py  benchmark.py  clean.py  report.py  robustness_card.py
av-robustbench/src/av_robustbench/leaderboard/: __init__.py  submit.py
av-robustbench/src/av_robustbench/leaderboard/data/: leaderboard.json
av-robustbench/src/av_robustbench/metrics/: __init__.py  binary.py  certification.py  rar.py
av-robustbench/src/av_robustbench/models/: __init__.py  registry.py
av-robustbench/src/av_robustbench/models/adapters/: __init__.py  base.py  cmar.py  generic.py
av-robustbench/src/av_robustbench/utils/: __init__.py  io.py  seed.py  visualization.py
av-robustbench/tests/: test_adapters.py  test_attacks.py  test_certification.py  test_degradations_and_leaderboard.py  test_metrics_and_cards.py  test_registry.py
cmar/: __init__.py  config.py
configs/: preprocess_fakeavceleb.json  train_cmar.json  train_visual_only.json
docs/: COLAB_PARALLEL_DEGRADED_WORKER.py  COLAB_PREPROCESS_CELL.py  COLAB_PREPROCESS_DEGRADED_CELL.py  CertAV_Project_Explainer.md  DATASET_LAYOUT.md  KAGGLE_RUNBOOK.md  PHASE2_KAGGLE_RUNBOOK.md  PREPROCESSING_CACHE.md  README.md  RESEARCH_REVIEW.md  certav-elevt-v2-plan.md  certavbench-v2-mentor review.md  reviewer_assessment.md  writing_notes_related_work.md
notebooks/: COLAB_UPLOAD_CLEAN_CACHE.py  README.md  certav_aggregation_notebook.md  (+6 more)
paper/: refs.bib  (+13 more)
(+150 files in other folders)
